# Niceboat

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pythonpackage.yml
niceboat/: __init__.py
tests/: test_niceboat.py
tests/data/: ex_K200901.TXT
